2. Тестовое задание. Hibernate. [#330581]

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,132 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  <filter>
+    <filter-name>AuthFilter</filter-name>
+    <filter-class>ru.job4j.cars.filter.AuthFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>AuthFilter</filter-name>
+    <url-pattern>*.do</url-pattern>
+  </filter-mapping>
+  <servlet>
+    <servlet-name>IndexServlet</servlet-name>
+    <servlet-class>ru.job4j.cars.servlets.IndexServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>CreateServlet</servlet-name>
+    <servlet-class>ru.job4j.cars.servlets.CreateAdvServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>UpdateServlet</servlet-name>
+    <servlet-class>ru.job4j.cars.servlets.UpdateServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>EditServlet</servlet-name>
+    <servlet-class>ru.job4j.cars.servlets.CreateAdvServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>BrandServlet</servlet-name>
+    <servlet-class>ru.job4j.cars.servlets.BrandServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>BodyServlet</servlet-name>
+    <servlet-class>ru.job4j.cars.servlets.BodyServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>CategoryServlet</servlet-name>
+    <servlet-class>ru.job4j.cars.servlets.CategoryServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>ModelServlet</servlet-name>
+    <servlet-class>ru.job4j.cars.servlets.ModelServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>AdvServlet</servlet-name>
+    <servlet-class>ru.job4j.cars.servlets.AdvServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>DownloadServlet</servlet-name>
+    <servlet-class>ru.job4j.cars.servlets.DownloadServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>PhotoUploadServlet</servlet-name>
+    <servlet-class>ru.job4j.cars.servlets.PhotoUploadServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>LoginServlet</servlet-name>
+    <servlet-class>ru.job4j.cars.servlets.LoginServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>RegServlet</servlet-name>
+    <servlet-class>ru.job4j.cars.servlets.RegServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>LogoutServlet</servlet-name>
+    <servlet-class>ru.job4j.cars.servlets.LogoutServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>RemoveFromSaleServlet</servlet-name>
+    <servlet-class>ru.job4j.cars.servlets.RemoveFromSaleServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>IndexServlet</servlet-name>
+    <url-pattern>/index.do</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>CreateServlet</servlet-name>
+    <url-pattern>/create.do</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>UpdateServlet</servlet-name>
+    <url-pattern>/update.do</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>EditServlet</servlet-name>
+    <url-pattern>/edit.do</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>BrandServlet</servlet-name>
+    <url-pattern>/brand</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>BodyServlet</servlet-name>
+    <url-pattern>/body</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>CategoryServlet</servlet-name>
+    <url-pattern>/category</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>ModelServlet</servlet-name>
+    <url-pattern>/model</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>AdvServlet</servlet-name>
+    <url-pattern>/adv.do</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>DownloadServlet</servlet-name>
+    <url-pattern>/download</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>PhotoUploadServlet</servlet-name>
+    <url-pattern>/upload.do</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>LoginServlet</servlet-name>
+    <url-pattern>/login.do</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>RegServlet</servlet-name>
+    <url-pattern>/reg.do</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>LogoutServlet</servlet-name>
+    <url-pattern>/logout.do</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>RemoveFromSaleServlet</servlet-name>
+    <url-pattern>/sold.do</url-pattern>
+  </servlet-mapping>
 </web-app>
